Patch by Adam Bergkvist <adam.bergkvist@ericsson.com> on 2011-08-12 Reviewed by Alexey Proskuryakov.

EventSource loader should not buffer data
https://bugs.webkit.org/show_bug.cgi?id=61863

Disabled buffering in the EventSource loader.

Added a manual test.

* manual-tests/eventsource/eventsource-loader-buffering.html: Added.
* manual-tests/eventsource/eventsource-loader-buffering.php: Added.
* page/EventSource.cpp:
(WebCore::EventSource::connect):

git-svn-id: svn://svn.chromium.org/blink/trunk@92991 bbb929c8-8fbe-4397-9dbb-9b2b20218538