third_party/WebKit/Source/WebCore/manual-tests/eventsource/eventsource-loader-buffering.php
@@ -1,0 +1,14 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php
+header("Content-Type: text/event-stream");
+
+$data = "";
+for ($i = 0; $i < 1000; $i++)
+    $data .= "x";
+
+for ($i = 0; $i < 30000; $i++) {
+    echo "data: $data\n\n";
+    flush();
+    usleep(1000);
+}
+?>
